# llm-red-team-toolkit

./: .gitignore  .zenodo.json  CITATION.cff  ETHICAL_USE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
adapters/: __init__.py  base.py  generic.py  nvidia.py  openrouter.py
harness/: __init__.py  cli.py  config.py  evaluator.py  report.py  scorer.py
paper/: paper.tex
probes/: __init__.py  base.py  data_model_poisoning.py  excessive_agency.py  improper_output.py  insecure_output.py  insecure_plugin.py  jailbreaks.py  misinformation.py  model_dos.py  model_extraction.py  model_theft.py  overreliance.py  prompt_injection.py  registry.py  sensitive_info.py  supply_chain.py  system_prompt_leakage.py  tool_abuse.py  training_data.py  unbounded_consumption.py  vector_embedding.py
results/: generic_qwen2.5_0.5b.json  generic_qwen2.5_0.5b.md  sample_report.json  sample_report.md
scripts/: render_figures.py  render_terminal.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_evaluator.py  test_marker_quality.py  test_probes.py  test_report.py  test_scorer.py  test_tui.py
tui/: __init__.py  banner.py  dashboard.py  report.py  theme.py
